<resources>
    <string name="app_name">vault</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Vaultofcode</string>
    <string name="nav_header_subtitle">code.hk@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="send_message">Send Now</string>
    <string name="receive_message">Receive Now</string>
    <string name="delete_message">Delete Now</string>


    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="welcome_to_valut_of_code">Welcome to valut-of-code</string>
    <string name="todo">TODO</string>
    <string name="todo1">TODO</string>
</resources>